--- a/index.html
+++ b/index.html
@@ -422,9 +422,17 @@
 
             <div class="max-w-4xl mx-auto">
                 <div class="bg-white rounded-xl shadow-2xl overflow-hidden">
-                    <div class="p-8">
+                    <div class="p-4 md:p-8">
                         <div class="border-t border-gray-200 pt-6">
-                            <iframe src="pdf/CURSO DE.pdf#view=FitH" class="w-full h-[600px] rounded-lg border border-gray-300"></iframe>
+                            <div class="pdf-container">
+                                <iframe src="pdf/CURSO DE.pdf#view=FitH" class="w-full h-[400px] md:h-[600px] lg:h-[700px] rounded-lg border border-gray-300"></iframe>
+                            </div>
+                            <div class="mt-4 text-center">
+                                <a href="pdf/CURSO DE.pdf" target="_blank" class="inline-flex items-center gap-2 bg-[#4d4341] hover:bg-[#3a3230] text-white px-6 py-3 rounded-lg transition duration-300 shadow-lg">
+                                    <i class="fas fa-download"></i>
+                                    <span>Descargar PDF</span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
