--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <!-- Nosotros -->
     <section id="nosotros" class="py-20 bg-white">
-        <div class="container mx-auto px-4" style="padding-left: 2cm; padding-right: 2cm;">
+        <div class="container mx-auto px-4 md:px-8 lg:px-16 xl:px-24">
             <div class="text-center mb-16">
                 <h2 class="text-4xl md:text-5xl font-bold text-[#4d4341] mb-4">Sobre Nosotros</h2>
                 <div class="w-24 h-1 bg-[#4d4341] mx-auto mb-8"></div>
@@ -261,7 +261,7 @@
 
     <!-- Servicios -->
     <section id="servicios" class="py-20 bg-gray-50">
-        <div class="container mx-auto px-4" style="padding-left: 2cm; padding-right: 2cm;">
+        <div class="container mx-auto px-4 md:px-8 lg:px-16 xl:px-24">
             <div class="text-center mb-16">
                 <h2 class="text-4xl md:text-5xl font-bold text-[#4d4341] mb-4">Nuestros Servicios</h2>
                 <div class="w-24 h-1 bg-[#4d4341] mx-auto mb-8"></div>
@@ -411,7 +411,7 @@
 
     <!-- Cursos Disponibles -->
     <section id="cursos" class="py-20 bg-gray-50">
-        <div class="container mx-auto px-4" style="padding-left: 2cm; padding-right: 2cm;">
+        <div class="container mx-auto px-4 md:px-8 lg:px-16 xl:px-24">
             <div class="text-center mb-16">
                 <h2 class="text-4xl md:text-5xl font-bold text-[#4d4341] mb-4">Material Educativo</h2>
                 <div class="w-24 h-1 bg-[#4d4341] mx-auto mb-8"></div>
