--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Capacitaciones Alimentarias -->
                 <div class="bg-white rounded-xl shadow-2xl overflow-hidden hover:shadow-3xl transition duration-300 flex flex-col">
-                    <img src="images/Capacitacion.png" alt="Capacitaciones Alimentarias" class="w-full h-64 object-cover object-top">
+                    <img src="images/CursoDisponible.jpg" alt="Capacitaciones Alimentarias" class="w-full h-64 object-cover" style="object-position: 50% 30%;">
                     <div class="p-6 flex-grow">
                         <div class="flex items-center mb-3">
                             <i class="fas fa-chalkboard-teacher text-[#4d4341] text-3xl mr-3"></i>
